# horus-checker

./: .gitignore  CairoHorus.cabal  README.md  Z3.Monad  horus-check.cabal  stack.yaml
.github/workflows/: main.yml  profile.yml
abc/: f0.smt2  f0X.smt2  f1.smt2  f1X.smt2  inc.smt2
abcOpt/optimized_goals_f0/: 1.smt2
abcOpt/optimized_goals_f0X/: 1.smt2
abcOpt/optimized_goals_f1/: 1.smt2
abcOpt/optimized_goals_f1X/: 1.smt2
abcOpt/optimized_goals_inc/: 1.smt2
app/: Main.hs
balance_storage_var/: get_balance.smt2  get_balance<__main__.balance.read>.smt2  increase_balance.smt2  increase_balance<__main__.balance.read>.smt2  increase_balance<__main__.balance.write>.smt2
bitwise_simple_not_fake/: apply_bitwise.smt2  main.smt2  main<__main__.apply_bitwise>.smt2
bsf/: main.smt2
demos/: x.cairo  y.cairo
inline_balance_svar_simple/: f.smt2  f<__main__.balance.read>.smt2  main.smt2  main<__main__.balance.read>.smt2  main<__main__.balance.write>.smt2
lvar_addr/: alloc.smt2  f0.smt2  f1.smt2  f2.smt2  f3+F.smt2  f3+T.smt2  f4.smt2  f4__main__.alloc.smt2  f4__main__.f3.smt2
lvar_capture_mdls/: f0.smt2  f0__main__.inc.smt2  f1.smt2  f1__main__.inc.smt2  inc.smt2
scripts/ci/: install-mathsat.sh
src/Horus/: CFGBuild.hs  CairoSemantics.hs  ContractDefinition.hs  ContractInfo.hs  Global.hs  HReference.hs  Module.hs  Preprocessor.hs  Program.hs  SMTUtil.hs  Util.hs
src/Horus/CFGBuild/: Runner.hs
src/Horus/CairoSemantics/: Runner.hs
src/Horus/Expr/: Util.hs
src/Horus/Module/: Runner.hs
src/SimpleSMT/: Typed.hs
tests/resources/: bats-template
(+118 files in other folders)
