cabal-version:      2.4
name:               CairoHorus
version:            0.1.0.0
category:           Language

common deps
    build-depends:           aeson
                           , base
                           , containers
                           , mtl
                           , transformers

    default-language:        Haskell2010

library
    import:                  deps
    hs-source-dirs:          src
    build-tool-depends:      alex:alex, happy:happy
    exposed-modules:         Horus.ContractDefinition
                           , Horus.Instruction
                           , Horus.Program
    other-modules:           Horus.SMT2.Lexer
                           , Horus.SMT2.Parser
    build-depends:           array
                           , sbv
                           , text

executable cairo-horus
    import:                  deps
    hs-source-dirs:          app
    main-is:                 Main.hs

    build-depends:           CairoHorus
                           , bytestring
